<resources>
    <string name="app_name" translatable="false">DealMate</string>
    <string name="title_home">Home</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_keywords">Keywords</string>
    <string name="title_deals">Deals</string>
    <string name="today_btn_txt">Today</string>
    <string name="events_section_title">Events</string>
    <string name="tasks_section_title">Tasks</string>
    <string name="calls_section_title">Calls</string>
    <string name="total_income">Total income</string>
    <string name="deals">Deals</string>
    <string name="this_month">This month</string>
    <string name="chart_no_data">No data available</string>
    <string name="stats_average_income">Average income</string>
    <string name="stats_top_currency">Top currency</string>
    <string name="stats_total_deals">Total deals</string>
    <string name="stats_best_month">Best month</string>
    <string name="stats_income_chart">Income chart</string>
    <string name="stats_currency_distribution">Currency distribution</string>
    <string name="mark_as_completed">Complete</string>
    <string name="mark_as_uncompleted">Uncomplete</string>
    <string name="due_date">Due date</string>
    <string name="client">Client</string>
    <string name="progress">Progress</string>
    <string name="description">Description</string>
    <string name="dlg_save">Save</string>
    <string name="title_hint">Title</string>
    <string name="date_hint">Date</string>
    <string name="end_time_hint">End time</string>
    <string name="start_time_hint">Start time</string>
    <string name="time_hint">Time</string>

    <string name="add_event_dialog_title">Add event</string>
    <string name="edit_event_dialog_title">Edit event</string>
    <string name="event_saved_snack">Event saved</string>

    <string name="priority_hint">Priority</string>
    <string name="client_hint">Client</string>
    <string name="description_hint">Description</string>

    <string name="add_task_dialog_title">Add task</string>
    <string name="edit_task_dialog_title">Edit task</string>
    <string name="task_saved_snack">Task saved</string>

    <string name="add_call_dialog_title">Add call</string>
    <string name="edit_call_dialog_title">Edit call</string>
    <string name="call_saved_snack">Call saved</string>

    <string-array name="priority_dropdown_content">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Auto</item>
    </string-array>
    <string name="priority_low">Low</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_high">High</string>
    <string name="priority_auto">Auto</string>
    <string name="client_name_hint">Client name</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">Email</string>

    <string name="add_client_dialog_title">Add client</string>
    <string name="edit_client_dialog_title">Edit client</string>
    <string name="client_saved_snack">Client saved</string>

    <string name="currency_hint">Currency</string>
    <string name="amount_hint">Amount</string>

    <string name="add_deal_dialog_title">Add deal</string>
    <string name="edit_deal_dialog_title">Edit deal</string>
    <string name="deal_saved_snack">Deal saved</string>

    <string name="unknown_error">Unknown error</string>

    <string name="dlg_pos_answer">Yes</string>
    <string name="dlg_neg_answer">No</string>
    <string name="del_dlg_msg">Are you sure?</string>

    <string name="del_event_dlg_title">Delete event</string>
    <string name="event_removed_snack">Event removed</string>

    <string name="del_task_dlg_title">Delete task</string>
    <string name="task_removed_snack">Task removed</string>

    <string name="del_call_dlg_title">Delete call</string>
    <string name="call_removed_snack">Call removed</string>

    <string name="del_client_dlg_title">Delete client</string>
    <string name="client_removed_snack">Client removed</string>

    <string name="del_deal_dlg_title">Delete deal</string>
    <string name="deal_removed_snack">Deal removed</string>
</resources>