<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bizsolutions.dealmate.ui.home.HomeFragment"
        android:label=""
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_task"
            app:destination="@id/navigation_task" />
    </fragment>

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.bizsolutions.dealmate.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bizsolutions.dealmate.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/navigation_deals"
        android:name="com.bizsolutions.dealmate.ui.deals.DealsFragment"
        android:label="@string/title_deals"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/navigation_task"
        android:name="com.bizsolutions.dealmate.ui.task.TaskFragment"
        android:label=""
        tools:layout="@layout/fragment_task">

        <argument
            android:name="taskId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>