<?xml version="1.0" encoding="utf-8"?>
<com.bizsolutions.dealmate.ui.contacts.BottomFadingEdgeNestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:requiresFadingEdge="vertical"
    android:fadingEdgeLength="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/fragment_task_title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceTitleLarge"
            android:ellipsize="none"
            android:requiresFadingEdge="horizontal"
            android:singleLine="true"
            android:fadingEdgeLength="20dp"
            tools:text="Lorem ipsum dolor sit amet" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fragment_task_priority_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:chipIcon="@drawable/ic_stat_2"
            app:chipIconTint="?colorOnSecondaryContainer"
            app:chipStrokeWidth="0dp"
            app:chipBackgroundColor="?colorSecondaryContainer"
            tools:text="Medium"
            app:chipMinTouchTargetSize="32dp"
            android:layout_marginTop="8dp"
            android:clickable="false"
            android:focusable="false" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/fragment_task_date_icon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1"
                android:adjustViewBounds="true"
                android:background="?colorSecondaryContainer"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
                android:tint="?colorOnSecondaryContainer"
                android:src="@drawable/ic_calendar_scaled"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/fragment_task_date_title"
                app:layout_constraintBottom_toBottomOf="@id/fragment_task_date_txt"/>

            <TextView
                android:id="@+id/fragment_task_date_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:layout_marginStart="8dp"
                android:ellipsize="none"
                android:fadingEdgeLength="20dp"
                android:requiresFadingEdge="horizontal"
                android:singleLine="true"
                android:layout_marginEnd="4dp"
                android:paddingTop="2dp"
                app:layout_constraintStart_toEndOf="@id/fragment_task_date_icon"
                app:layout_constraintEnd_toStartOf="@id/fragment_task_center_vertical_guideline"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/due_date" />

            <TextView
                android:id="@+id/fragment_task_date_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:layout_marginStart="8dp"
                android:ellipsize="none"
                android:fadingEdgeLength="20dp"
                android:requiresFadingEdge="horizontal"
                android:singleLine="true"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="2dp"
                android:paddingBottom="2dp"
                app:layout_constraintStart_toEndOf="@id/fragment_task_date_icon"
                app:layout_constraintEnd_toStartOf="@id/fragment_task_center_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@id/fragment_task_date_title"
                tools:text="April 20, 2025" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/fragment_task_center_vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/fragment_task_client_icon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1"
                android:adjustViewBounds="true"
                android:background="?colorSecondaryContainer"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
                android:tint="?colorOnSecondaryContainer"
                android:src="@drawable/ic_person_scaled"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toEndOf="@id/fragment_task_center_vertical_guideline"
                app:layout_constraintTop_toTopOf="@id/fragment_task_client_title"
                app:layout_constraintBottom_toBottomOf="@id/fragment_task_client_txt"/>

            <TextView
                android:id="@+id/fragment_task_client_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:layout_marginStart="8dp"
                android:ellipsize="none"
                android:fadingEdgeLength="20dp"
                android:requiresFadingEdge="horizontal"
                android:singleLine="true"
                android:layout_marginEnd="4dp"
                android:paddingTop="2dp"
                app:layout_constraintStart_toEndOf="@id/fragment_task_client_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/client" />

            <TextView
                android:id="@+id/fragment_task_client_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:layout_marginStart="8dp"
                android:ellipsize="none"
                android:fadingEdgeLength="20dp"
                android:requiresFadingEdge="horizontal"
                android:singleLine="true"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="2dp"
                android:paddingBottom="2dp"
                app:layout_constraintStart_toEndOf="@id/fragment_task_client_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_task_client_title"
                tools:text="John Doe" />

            <TextView
                android:id="@+id/fragment_task_progress_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                android:text="@string/progress"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_task_date_txt" />

            <TextView
                android:id="@+id/fragment_task_progress_value_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                tools:text="26%"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/fragment_task_date_txt"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.slider.Slider
                android:id="@+id/fragment_task_progress_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_task_progress_title"
                android:layout_marginTop="8dp"
                android:valueFrom="0"
                tools:value="26"
                android:valueTo="100"
                android:stepSize="1"
                app:tickVisible="false"
                app:thumbTrackGapSize="4dp"
                app:thumbHeight="24dp"
                app:trackStopIndicatorSize="0dp"
                app:trackHeight="16dp"
                app:labelBehavior="gone" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?textAppearanceTitleMedium"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/fragment_task_description_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ligula massa, mollis id tincidunt sit amet, sodales nec velit. Sed scelerisque lectus felis. Sed sagittis metus libero, at egestas urna pretium et." />

    </LinearLayout>
</com.bizsolutions.dealmate.ui.contacts.BottomFadingEdgeNestedScrollView>